--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,12 +3,12 @@
         <div class="navbar-wrapper">
             <a class="navbar-brand" href="javascript:void(0)">{{getTitle()}}</a>
         </div>
-        <!-- <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()">
-            <span class="sr-only">Toggle navigation</span>
+        <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()">
+            <!-- <span class="sr-only">Toggle navigation</span>
             <span class="navbar-toggler-icon icon-bar"></span>
             <span class="navbar-toggler-icon icon-bar"></span>
-            <span class="navbar-toggler-icon icon-bar"></span>
-        </button> -->
+            <span class="navbar-toggler-icon icon-bar"></span> -->
+        </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
                 <li class="nav-item">
