Clean up and default to training mode

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -40,7 +40,7 @@
                 <div class="card-header card-header-danger card-header-icon">
                     <p class="card-category">Viewing Mode</p>
                     <h3 *ngIf="humanPlay" class="card-title">Playing mode</h3>
-                    <h3 *ngIf="(!humanPlay)" class="card-title">Viewing mode</h3>
+                    <h3 *ngIf="(!humanPlay)" class="card-title">Training mode</h3>
                 </div>
                 <div class="card-footer">
                 </div>
