--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -21,10 +21,6 @@
                     <p class="card-category">Robot Score</p>
                     <h3 class="card-title">{{ robotScore }}</h3>
                 </div>
-                <div class="card-footer">
-                    <p *ngIf="(!humanPlay) && (!init)" class="card-category"> Last save at:
-                        {{ robotCheckpoint | date:'HH:mm:ss' }} </p>
-                </div>
             </div>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2">
@@ -33,9 +29,21 @@
                     <p class="card-category">Opponent Score</p>
                     <h3 class="card-title"> {{ opponentScore }} </h3>
                 </div>
-                <div class="card-footer">
-                    <p *ngIf="(!humanPlay) && (!init)" class="card-category"> Last save at:
-                        {{ opponentCheckpoint | date:'HH:mm:ss' }} </p>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2">
+            <div class="card card-stats">
+                <div class="card-header card-header-success card-header-icon">
+                    <p class="card-category">Cumulative Robot Score</p>
+                    <h3 class="card-title">{{ robotCumulativeScore }}</h3>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-2">
+            <div class="card card-stats">
+                <div class="card-header card-header-danger card-header-icon">
+                    <p class="card-category">Cumulative Opponent Score</p>
+                    <h3 class="card-title"> {{ opponentCumulativeScore }} </h3>
                 </div>
             </div>
         </div>
