--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -34,16 +34,16 @@
         <div class="col-lg-2 col-md-2 col-sm-2">
             <div class="card card-stats">
                 <div class="card-header card-header-success card-header-icon">
-                    <p class="card-category">Cumulative Robot Score</p>
-                    <h3 class="card-title">{{ robotCumulativeScore }}</h3>
+                    <p class="card-category">Cumulative Robot Wins</p>
+                    <h3 class="card-title">{{ robotCumulativeWins }}</h3>
                 </div>
             </div>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2">
             <div class="card card-stats">
                 <div class="card-header card-header-danger card-header-icon">
-                    <p class="card-category">Cumulative Opponent Score</p>
-                    <h3 class="card-title"> {{ opponentCumulativeScore }} </h3>
+                    <p class="card-category">Cumulative Opponent Wins</p>
+                    <h3 class="card-title"> {{ opponentCumulativeWins }} </h3>
                 </div>
             </div>
         </div>
